# ChangeLog for dev-ruby/timers
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/timers/ChangeLog,v 1.8 2014/04/28 05:35:33 graaff Exp $

  28 Apr 2014; Hans de Graaff <graaff@gentoo.org> timers-1.1.0-r1.ebuild:
  Add ruby21.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> timers-1.1.0-r1.ebuild:
  Remove ruby18 support.

  03 Nov 2013; Manuel Rüger <mrueg@gentoo.org> -timers-1.0.2.ebuild,
  -timers-1.1.0.ebuild:
  Cleanup old.

*timers-1.1.0-r1 (09 Oct 2013)

  09 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +timers-1.1.0-r1.ebuild:
  Add ruby20 target.

*timers-1.1.0 (21 Apr 2013)

  21 Apr 2013; Hans de Graaff <graaff@gentoo.org> +timers-1.1.0.ebuild:
  Version bump.

  21 Apr 2013; Hans de Graaff <graaff@gentoo.org> -timers-1.0.1.ebuild:
  Cleanup.

*timers-1.0.2 (02 Apr 2013)

  02 Apr 2013; Hans de Graaff <graaff@gentoo.org> +timers-1.0.2.ebuild:
  Version bump.

*timers-1.0.1 (30 Sep 2012)

  30 Sep 2012; Hans de Graaff <graaff@gentoo.org> +timers-1.0.1.ebuild,
  +metadata.xml:
  Initial import. Dependency for celluloid.