@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST timers-1.1.0.gem 7680 SHA256 3bbb9651a73e43e47950a5e13a7fa62f852cd5c46e421bb671e9ade1fbb47b74 SHA512 4fbaa450b935316e62799e1b8bbeef0dc90959de20a839d2169bdb3909e22c0613344a8a71e4583bb148e4772711312e973b2a47007fa49f2cd6b67d317987f1 WHIRLPOOL 8e190b2f95efcc8d4d3692a848d371f9d8d3f39c8cbc197743c58829de0596e32bff3b7a9d62342dffd603480926d2ab338596e90798896c770ff8dd591b47ee
+DIST timers-2.0.0.gem 9728 SHA256 9b3d4c35aebb63b2ed3c213d2f70d79d0091723d2a48d8c8eb8b1a313e6fe061 SHA512 d194ca71cddbbf74cd3ce7d70a4f3278e65889ce5906777b957b38d3ae300ed2a3c19b79dd0f0d4ebe53f931b1602a80229e0dba32038bd4f796eef4e17c498c WHIRLPOOL 12cbf214001982c88189df7dc60a47f1bc3f4bd7d649250b29a133ec6d097694373841a1e1d870d80c60a8d8cbc2e8cd4f6c6ba69ee797d3c6a695214c2ff3a0
 EBUILD timers-1.1.0-r1.ebuild 644 SHA256 4607c3f11c336c5f3b712b7d1b301f88a86a8b22f5654320c55e7f110de52fbf SHA512 7f6d494cbd06c1f69a1af05ef89053d720840626cfe0359dfec8373b737a29ed7250da391b9277b74f9c19039659a1307de30ea2885034a29d0ac3c301e91db6 WHIRLPOOL 9cb1fb2e923de64b5ecca19f5237b4a056537b28e4cd3b8ba4cb091bc4f534918a7f2ec546a9f7212d759056dfd3cc8f61f0085b9c81c0f025b7e9b920e13fad
-MISC ChangeLog 1109 SHA256 1a490b541106f69b8bea5a721fa2b1345956e761b1f957e876e34d059bc7c8b8 SHA512 d878ad65f6878be24cfbf294189775d7598acdefcb4f2a2bff752ade4a9c0611721ab95449b00c05abbba7b1d2d5316e3fed3095ff193f06f324253c97f77e5b WHIRLPOOL 0ebd382a7909b7206f20ad8ba1753a6f3369eff1fd5e8a9c8148a029e531fcfce0750aae7efca8bc46f8a2da4f458e8454e2492ab153739a037ce94b0d237acb
+EBUILD timers-2.0.0.ebuild 795 SHA256 fa514e53a1608f87cf8148f157696d28602ff41eacf88e2152b76920fd5be4b0 SHA512 2268ede48d81e292163f8181ce8242f6a23e39b2e2031b3bd3435230c5cb8e2b9dbbe97f2ec78ca3b2ef8d6296ba81e9db887fe0ece03cae9058e9cf90be1c50 WHIRLPOOL 9a74515f1aeef44d3d67ceec05d668df0e9a0b4de265486125241de0d87df9dfeb331f800e29a8e2fbff28bec05a71336d4e6b5abfa22bdc26ea77117c7f2110
+MISC ChangeLog 1272 SHA256 aa025ced82bee02dad1e0c087298344ffdad9675c3957af2514bebc4924b32cf SHA512 fd90e388ef4be7506577ff3ce95ad38b075ffc243a5397ead45179c6968fadacb22b67cd5290a08ba9afa45f1eba67c82450836b8df90adde5af430bf58748a1 WHIRLPOOL 1cd325dcb1dbb95b3c9e48bd6598b43e8e3c7709b93f8039da3f8a68801a34aae22bd2aa778d5cbe7803ddea5d54fb010bb507167b9a985127bfb5bca8d0702a
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNd6KoACgkQiIP6VqMIqNewOQD/SUX4cGCIcdVPhibtXtyM7gFa
-ucCEwlQH9YfXH57zIbsA/1OZA9EHhkVQu5d6PTNTImXpRYCS8amip5nnALelWEPX
-=4vCE
+iF4EAREIAAYFAlNfOXsACgkQiIP6VqMIqNetcgEAiolTB+xSnBnRYXbVyunQe74y
+nf5Qkkd4bO7mqHn3M44BAJEDnoGRvCxjiAi8nA9bjtj6Pjv75QawULsodtu5Pg8d
+=vTK7
 -----END PGP SIGNATURE-----
